fix: auth hookup + removal of characters and example project + mise fix (#30)
* auth hookup + removal of characters and example project + mise fix

* chore: remove comments flagged in review
